# xrdclient

./: .gitignore  CMakeLists.txt  Doxyfile  README  genversion.sh
XrdCl/: XrdClBuffer.hh  XrdClXRootDMsgHandler.cc
cmake/: FindCPPUnit.cmake  FindXRootD.cmake  XRootDCommon.cmake
packaging/: makesrpm.sh
packaging/rhel/: xrdclient.spec.in
